--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -767,6 +767,12 @@ $pf-page-v5--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 // stylelint-disable no-invalid-position-at-import-rule
 @import "themes/dark/page";
 
+:root(:where(#{$pf-v5--theme-dark--class})),
+#{$pf-v5--theme-dark--class} {
+  @include pf-v5-theme-dark-vars;
+}
+
+
 @include pf-v5-theme-dark {
   @include pf-v5-theme-dark-page;
 }
