--- a/src/patternfly/components/Page/themes/dark/page.scss
+++ b/src/patternfly/components/Page/themes/dark/page.scss
@@ -1,7 +1,7 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
 @mixin pf-v5-theme-dark-page() {
-  .#{$page} {
+  &:root {
     --#{$page}__main-section--BackgroundColor: var(--#{$pf-global}--BackgroundColor--200);
     --#{$page}__header-tools--c-button--m-selected--before--BackgroundColor: var(--#{$pf-global}--BackgroundColor--300);
     --#{$page}__sidebar--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
