--- a/src/patternfly/demos/Masthead/masthead-template-application-launcher.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-application-launcher.hbs
@@ -1,58 +1,3 @@
-{{#> app-launcher app-launcher--id=(concat masthead--id '-application-launcher') app-launcher--IsGrouped="true"}}
-  {{#> app-launcher-menu app-launcher-menu--modifier="pf-m-align-right"}}
-    {{#> app-launcher-menu-search}}
-      {{> text-input-group--search-input text-input-group-text-input--aria-label="Search input" text-input-group-text-input--placeholder="Filer by name"}}
-    {{/app-launcher-menu-search}}
-    {{#> app-launcher-group}}
-      {{#> app-launcher-group-title}}
-        Favorites
-      {{/app-launcher-group-title}}
-      <ul role="list">
-        {{#> app-launcher-menu-wrapper app-launcher-menu-wrapper--type="li" app-launcher-menu-wrapper--modifier="pf-m-external pf-m-favorite"}}
-          {{#> app-launcher-menu-item}}
-            Link 1
-            {{> app-launcher-menu-item-external-icon}}
-          {{/app-launcher-menu-item}}
-          {{#> app-launcher-menu-item app-launcher-menu-item--type="button" app-launcher-menu-item--modifier="pf-m-action" app-launcher-menu-item--attribute='aria-label="Favorite"'}}
-            <i class="fas fa-star" aria-hidden="true"></i>
-          {{/app-launcher-menu-item}}
-        {{/app-launcher-menu-wrapper}}
-        {{#> app-launcher-menu-wrapper app-launcher-menu-wrapper--type="li" app-launcher-menu-wrapper--modifier="pf-m-external"}}
-          {{#> app-launcher-menu-item}}
-            Link 2
-            {{> app-launcher-menu-item-external-icon}}
-          {{/app-launcher-menu-item}}
-          {{#> app-launcher-menu-item app-launcher-menu-item--type="button" app-launcher-menu-item--modifier="pf-m-action" app-launcher-menu-item--attribute='aria-label="Favorite"'}}
-            <i class="fas fa-star" aria-hidden="true"></i>
-          {{/app-launcher-menu-item}}
-        {{/app-launcher-menu-wrapper}}
-      </ul>
-    {{/app-launcher-group}}
-    {{> divider}}
-    {{#> app-launcher-group}}
-      {{#> app-launcher-group-title}}
-        Group 1
-      {{/app-launcher-group-title}}
-      <ul role="list">
-        {{#> app-launcher-menu-wrapper app-launcher-menu-wrapper--type="li" app-launcher-menu-wrapper--modifier="pf-m-external"}}
-          {{#> app-launcher-menu-item}}
-            Link 1
-          {{> app-launcher-menu-item-external-icon}}
-          {{/app-launcher-menu-item}}
-          {{#> app-launcher-menu-item app-launcher-menu-item--type="button" app-launcher-menu-item--modifier="pf-m-action" app-launcher-menu-item--attribute='aria-label="Favorite"'}}
-            <i class="fas fa-star" aria-hidden="true"></i>
-          {{/app-launcher-menu-item}}
-        {{/app-launcher-menu-wrapper}}
-        {{#> app-launcher-menu-wrapper app-launcher-menu-wrapper--type="li" app-launcher-menu-wrapper--modifier="pf-m-external pf-m-favorite"}}
-          {{#> app-launcher-menu-item}}
-            Link 2
-          {{> app-launcher-menu-item-external-icon}}
-          {{/app-launcher-menu-item}}
-          {{#> app-launcher-menu-item app-launcher-menu-item--type="button" app-launcher-menu-item--modifier="pf-m-action" app-launcher-menu-item--attribute='aria-label="Favorite"'}}
-            <i class="fas fa-star" aria-hidden="true"></i>
-          {{/app-launcher-menu-item}}
-        {{/app-launcher-menu-wrapper}}
-      </ul>
-    {{/app-launcher-group}}
-  {{/app-launcher-menu}}
-{{/app-launcher}}
+{{#> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Application launcher"'}}
+  <i class="fas fa-th" aria-hidden="true"></i>
+{{/menu-toggle}}
