--- a/src/patternfly/components/Masthead/themes/dark/masthead.scss
+++ b/src/patternfly/components/Masthead/themes/dark/masthead.scss
@@ -3,6 +3,7 @@
 @mixin pf-v5-theme-dark-masthead() {
   .#{$masthead} {
     --#{$masthead}--BackgroundColor: var(--#{$pf-global}--palette--black-1000);
+    --#{$masthead}--item-border-color--base: var(--#{$pf-global}--BorderColor--100);
 
     .#{$toolbar} {
       --#{$toolbar}--BackgroundColor: var(--#{$pf-global}--palette--black-1000);
