--- a/src/patternfly/demos/Masthead/masthead-template-content-icon-group.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template-content-icon-group.hbs
@@ -14,7 +14,7 @@
       {{/menu-toggle}}
     {{/toolbar-item}}
     {{#> toolbar-item}}
-      {{#> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Actions"'}}
+      {{#> menu-toggle menu-toggle--IsPlain="true" menu-toggle--attribute='aria-label="Help"'}}
         <i class="fas fa-question-circle" aria-hidden="true"></i>
       {{/menu-toggle}}
     {{/toolbar-item}}
