--- a/src/patternfly/sass-utilities/placeholders.scss
+++ b/src/patternfly/sass-utilities/placeholders.scss
@@ -16,6 +16,10 @@
   --#{$pf-global}--link--Color: var(--#{$pf-global}--link--Color--light);
   --#{$pf-global}--link--Color--hover: var(--#{$pf-global}--link--Color--light);
   --#{$pf-global}--BackgroundColor--100: var(--#{$pf-global}--BackgroundColor--dark-100);
+
+  .#{$button} {
+    --#{$button}--m-primary--BackgroundColor: var(--#{$pf-global}--primary-color--dark-100);
+  }
 }
 
 // stylelint-disable
