--- a/src/patternfly/sass-utilities/themes/dark/placeholders.scss
+++ b/src/patternfly/sass-utilities/themes/dark/placeholders.scss
@@ -7,4 +7,8 @@
   --#{$pf-global}--link--Color: #{$pf-v5-global--link--Color};
   --#{$pf-global}--link--Color--hover: #{$pf-v5-global--link--Color--hover};
   --#{$pf-global}--BackgroundColor--100: #{$pf-v5-global--BackgroundColor--100};
+
+  .#{$button} {
+    --#{$button}--m-primary--BackgroundColor: var(--#{$pf-global}--primary-color--300);
+  }
 }
