--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -232,6 +232,10 @@
   // Icons
   --#{$pf-global}--icon--Color--light: #{$pf-v5-global--icon--Color--light};
   --#{$pf-global}--icon--Color--dark: #{$pf-v5-global--icon--Color--dark};
+  --#{$pf-global}--icon--Color--light--light: #{$pf-v5-global--icon--Color--light--light};
+  --#{$pf-global}--icon--Color--dark--light: #{$pf-v5-global--icon--Color--dark--light};
+  --#{$pf-global}--icon--Color--light--dark: #{$pf-v5-global--icon--Color--light--dark};
+  --#{$pf-global}--icon--Color--dark--dark: #{$pf-v5-global--icon--Color--dark--dark};
   --#{$pf-global}--icon--FontSize--sm: #{$pf-v5-global--icon--FontSize--sm};
   --#{$pf-global}--icon--FontSize--md: #{$pf-v5-global--icon--FontSize--md};
   --#{$pf-global}--icon--FontSize--lg: #{$pf-v5-global--icon--FontSize--lg};
