--- a/src/patternfly/sass-utilities/placeholders.scss
+++ b/src/patternfly/sass-utilities/placeholders.scss
@@ -6,6 +6,8 @@
   --#{$pf-global}--link--Color: var(--#{$pf-global}--link--Color--dark);
   --#{$pf-global}--link--Color--hover: var(--#{$pf-global}--link--Color--dark--hover);
   --#{$pf-global}--BackgroundColor--100: var(--#{$pf-global}--BackgroundColor--light-100);
+  --#{$pf-global}--icon--Color--light: var(--#{$pf-global}--icon--Color--light--dark);
+  --#{$pf-global}--icon--Color--dark: var(--#{$pf-global}--icon--Color--dark--dark);
 }
 
 %pf-v5-t-dark {
@@ -16,6 +18,8 @@
   --#{$pf-global}--link--Color: var(--#{$pf-global}--link--Color--light);
   --#{$pf-global}--link--Color--hover: var(--#{$pf-global}--link--Color--light);
   --#{$pf-global}--BackgroundColor--100: var(--#{$pf-global}--BackgroundColor--dark-100);
+  --#{$pf-global}--icon--Color--light: var(--#{$pf-global}--icon--Color--light--light);
+  --#{$pf-global}--icon--Color--dark: var(--#{$pf-global}--icon--Color--dark--light);
 
   .#{$button} {
     --#{$button}--m-primary--BackgroundColor: var(--#{$pf-global}--primary-color--dark-100);
