chore(pf-t-placeholder): updates for dark theme

--- a/src/patternfly/base/themes/dark/_variables.scss
+++ b/src/patternfly/base/themes/dark/_variables.scss
@@ -65,6 +65,10 @@
   --#{$pf-global}--link--Color--light--hover: #{$pf-v5-global--link--Color--light--hover};
   --#{$pf-global}--link--Color--dark: #{$pf-v5-global--link--Color--dark};
   --#{$pf-global}--link--Color--dark--hover: #{$pf-v5-global--link--Color--dark--hover};
+  --#{$pf-global}--icon--Color--light--light: #{$pf-v5-global--icon--Color--light};
+  --#{$pf-global}--icon--Color--dark--light: #{$pf-v5-global--icon--Color--dark};
+  --#{$pf-global}--icon--Color--light--dark: #{$pf-v5-global--icon--Color--light};
+  --#{$pf-global}--icon--Color--dark--dark: #{$pf-v5-global--icon--Color--dark};
   --#{$pf-global}--BackgroundColor--light-100: #{$pf-v5-global--BackgroundColor--light-100};
   --#{$pf-global}--BackgroundColor--light-200: #{$pf-v5-global--BackgroundColor--light-200};
   --#{$pf-global}--BackgroundColor--light-300: #{$pf-v5-global--BackgroundColor--light-300};
