fix(charts): fixed dark theme chart var prefix

--- a/src/patternfly/base/themes/dark/_chart-globals.scss
+++ b/src/patternfly/base/themes/dark/_chart-globals.scss
@@ -1,7 +1,7 @@
 @import "../../../sass-utilities/colors";
 @import "../../../sass-utilities/scss-variables";
 // stylelint-disable scss/dollar-variable-pattern
-$chart: #{$pf-prefix} + 'c-chart';
+$chart: #{$pf-prefix} + 'chart';
 // stylelint-enable
 
 // Chart colors
