chore(select): removed checks to reflect what menu actually does

--- a/src/patternfly/components/Select/__select-menu-descriptive.hbs
+++ b/src/patternfly/components/Select/__select-menu-descriptive.hbs
@@ -33,12 +33,7 @@
       {{/select-menu-item}}
     </li>
     <li role="presentation">
-      {{#> select-menu-item select-menu-item--Description="This is a description." select-menu-item--IsSelected="true"}}
-        Menu item description selected
-      {{/select-menu-item}}
-    </li>
-    <li role="presentation">
-      {{#> select-menu-item select-menu-item--Description="This is a really long description that describes the menu item. This is a really long description that describes the menu item." select-menu-item--IsSelected="true"}}
+      {{#> select-menu-item select-menu-item--Description="This is a really long description that describes the menu item. This is a really long description that describes the menu item."}}
         Menu item long description
       {{/select-menu-item}}
     </li>
