fix(font): fixed RHD bold incorrect font mapping to italic font

--- a/src/patternfly/base/_fonts.scss
+++ b/src/patternfly/base/_fonts.scss
@@ -27,7 +27,7 @@
 
 @font-face {
   font-family: RedHatDisplay;
-  font-style: normal;
+  font-style: italic;
   font-weight: 700;
   src:
     url("#{$pf-v5-global--font-path}/RedHatDisplay/RedHatDisplay-BoldItalic.woff2") format("woff2");
