fix(dark-theme-placeholders): @mcoker fixed the placeholders

--- a/src/patternfly/sass-utilities/scss-variables.scss
+++ b/src/patternfly/sass-utilities/scss-variables.scss
@@ -1,4 +1,5 @@
 @import './init'; // initialize versioning
+$pf-v5-global--placeholders-loaded: false;
 
 // This file is for initial variable values.
 // All variables should have a valid css value,
