--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -358,6 +358,11 @@
 
 .#{$card}__header-main {
   flex: 1;
+
+  img.pf-theme-toggle--dark {
+    display: none;
+  }
+  
 }
 
 .#{$card}__header-toggle {
