--- a/src/patternfly/components/Menu/menu-item.hbs
+++ b/src/patternfly/components/Menu/menu-item.hbs
@@ -5,14 +5,18 @@
   {{else}}
     {{#if menu-item--IsLink}}
       href="#"
-      {{#if menu-list-item--IsDisabled}}
+      {{#ifAny menu-list-item--IsDisabled menu-list-item--IsAriaDisabled}}
         aria-disabled="true"
+      {{/ifAny}}
+      {{#if menu-list-item--IsDisabled}}
         tabindex="-1"
       {{/if}}
     {{else}}
       type="button"
       {{#if menu-list-item--IsDisabled}}
         disabled
+      {{else if menu-list-item--IsAriaDisabled}}
+        aria-disabled="true"
       {{/if}}
     {{/if}}
     role="menuitem"
