--- a/src/patternfly/components/ExampleComponent/example-component.hbs
+++ b/src/patternfly/components/ExampleComponent/example-component.hbs
@@ -1,13 +1,12 @@
 {{#>
   config
   className='example-component'
-  theme='penta'
+  theme=''
 }}
 
 <div class="{{> set-class}}"
   {{> set-attribute}}>
   {{> @partial-block}}
-  {{debug}}
 </div>
 
 {{/config}}
