--- a/src/patternfly/components/ExampleComponent/templates/example-component-object.hbs
+++ b/src/patternfly/components/ExampleComponent/templates/example-component-object.hbs
@@ -13,5 +13,6 @@
       {{this.items.url}}
     {{/example-component-footer}}
     {{{html}}}
+    {{log this.root}}
   {{/example-component}}
 {{/each}}
