--- a/src/patternfly/sass-utilities/component-namespaces.scss
+++ b/src/patternfly/sass-utilities/component-namespaces.scss
@@ -212,6 +212,7 @@ $select: #{$pf-prefix} + 'c-select';
 // Sidebar
 $sidebar: #{$pf-prefix} + 'c-sidebar';
 
+$testing: #{$pf-prefix} + 'c-testing';
 // Simple List
 $simple-list: #{$pf-prefix} + 'c-simple-list';
 
